# web-server

./: CMakeLists.txt  README.md
config/: config_file
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: 404.h  blocking_handler.h  config_parser.h  echo_handler.h  health_handler.h  http_client.h  logger.h  login_handler.h  not_found_handler.h  request.h  request_handler.h  response.h  reverse_proxy_handler.h  server.h  session.h  static.h  static_handler.h  status.h  status_handler.h
src/: 404.cc  404.h  _main.cc  blocking_handler.cc  config_parser.cc  config_parser.h  echo.cc  echo.h  echo_handler.cc  health_handler.cc  http_client.cc  logger.cc  logger.h  login_handler.cc  main.cc  not_found_handler.cc  request.cc  request.h  request_handler.cc  response.cc  response.h  reverse_proxy_handler.cc  server.cc  server.h  server.hpp  server_main.cc  session.cc  session.h  session.hpp  static.cc  static.h  static_handler.cc  static_handler.h  status.cc  status_handler.cc
tests/: config_parser_test.cc  echo_response_test.cc  integration.sh  regression_404.out  regression_echo.out  regression_static1.out  regression_static2.out  request_test.cc  response_test.cc  server_test.cc  session_test.cc  static_handler_test.cc  static_test.cc
tests/example_config/: config_assign7  config_assign9  config_echo_location  config_file  config_file_single  config_gcloud  config_locations  config_proxy  config_static_location  example_basic_config  example_comment_config  example_incorrect_nested_block_config  example_incorrect_quoted_string_config  example_incorrect_single_block_config  example_incorrect_single_quote_config  example_new_config  example_recursive_config  invalid_port  invalid_port_3  valid_port
tests/integration/: config  integration.sh
tests/integration/regressions/: regression_400.out  regression_echo.out  regression_login.out  regression_login_denied.out  regression_static.out  regression_static2.out
tests/static_folder/: hello.html~  login.html  noext
tests/unit/: config_parser_test.cc  echo_handler_test.cc  echo_response_test.cc  health_handler_test.cc  login_handler_test.cc  not_found_handler_test.cc  reverse_proxy_handler_test.cc  server_test.cc  session_test.cc  static_handler_test.cc  static_test.cc  status_handler_test.cc
